--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@hookform/resolvers": "^2.8.8",
     "@material-ui/core": "^4.12.4",
     "@material-ui/styles": "^4.11.5",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
