--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.1",
     "date-fns": "^2.28.0",
+    "depcheck": "^1.4.3",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
