--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.27.1",
     "date-fns": "^2.28.0",
     "depcheck": "^1.4.3",
+    "emailjs-com": "^3.2.0",
     "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
