--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.1",
     "bcryptjs": "^2.4.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.28.0",
     "depcheck": "^1.4.3",
