--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6",
     "moment": "^2.29.3",
+    "powerbi-client-react": "^1.3.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.30.0",
