--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.5",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.1",
     "bcryptjs": "^2.4.3",
     "body-scroll-lock": "^4.0.0-beta.0",
