--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.5",
     "@types/styled-components": "^5.1.25",
+    "@types/uuid": "^8.3.4",
     "axios": "^0.27.1",
     "bcryptjs": "^2.4.3",
     "body-scroll-lock": "^4.0.0-beta.0",
