--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "tua-body-scroll-lock": "^1.2.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
