--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -31,6 +32,7 @@
     "axios": "^0.27.1",
     "bcryptjs": "^2.4.3",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.28.0",
     "depcheck": "^1.4.3",
@@ -39,11 +41,12 @@
     "moment": "^2.29.3",
     "powerbi-client-react": "^1.3.5",
     "react": "^18.1.0",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "tua-body-scroll-lock": "^1.2.1",
     "uuid": "^8.3.2",
@@ -75,10 +78,15 @@
     ]
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/ws": "^8.5.12",
     "awesome-typescript-loader": "^5.2.1",
-    "source-map-loader": "^4.0.0",
+    "source-map-loader": "^5.0.0",
     "typescript": "^4.7.4"
+  },
+  "resolutions": {
+    "webpack": "^5.72.1"
   }
 }
