--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/pickers": "^3.3.11",
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.6.2",
@@ -23,24 +23,25 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/bcryptjs": "^2.4.2",
     "@types/body-scroll-lock": "^3.1.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.5",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.1",
-    "bcryptjs": "^2.4.3",
     "body-scroll-lock": "^4.0.0-beta.0",
     "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
+    "crypto-random-string": "^5.0.0",
     "date-fns": "^2.28.0",
     "depcheck": "^1.4.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6.5.1",
     "moment": "^2.29.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "powerbi-client-react": "^1.3.5",
     "react": "^18.1.0",
+    "react-app-rewired": "^2.2.1",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.30.0",
@@ -57,7 +58,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --no-cache"
   },
   "eslintConfig": {
     "extends": [
